--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,6 +5,7 @@ haproxy_version: latest
 haproxy_config_dir: /opt/docker/services/haproxy
 haproxy_published_ports: []
 haproxy_links: []
+haproxy_network_mode: ''
 haproxy_networks: []
 
 haproxy_configuration: ''
