--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,6 +21,7 @@
     restart_policy: always
     published_ports: '{{ haproxy_published_ports | default([]) }}'
     links: '{{ haproxy_links }}'
+    network_mode: '{{ haproxy_network_mode }}'
     networks: '{{ haproxy_networks }}'
     volumes:
       - '{{ haproxy_config_dir }}/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg:ro'
