Add log driver configuration

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -16,3 +16,5 @@ haproxy_volumes:
   - '{{ haproxy_config_dir }}:/usr/local/etc/haproxy'
 haproxy_command: ''
 haproxy_configuration: ''
+haproxy_container_log_driver: ''
+haproxy_container_log_opt: ''
